--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -510,6 +510,7 @@ footer #logograndlyon {
 }
 
 /* Pagemenu */
+/* Pagemenu */
 .cat-menu{
     margin-bottom:10px;
 }
@@ -544,10 +545,6 @@ footer #logograndlyon {
     background-color: rgba(0,0,0,0.3);
 }
 
-.txt-menu, .img-menu{
-    height:250px;
-}
-
 .cat-menu, .img-menu{
     min-height:250px;
 }
@@ -563,7 +560,7 @@ footer #logograndlyon {
     }
 }
 
-@media screen and (min-width: 992px){
+@media screen and (min-width: 970px){
     .reverse{
         float: right;
     }
