--- a/assets/css/sscat.css
+++ b/assets/css/sscat.css
@@ -10,6 +10,7 @@
 	background-color: white;
 	margin-top: 10px;
 	padding: 10px;
+	position: relative;
 }
 
 #list-item > * {
@@ -61,4 +62,37 @@
 
 .close_now {
 	color: red;
+}
+
+#advise_button {
+	text-align: center;
+	margin: 0px auto !important;
+	width: 100px;
+	display: block;
+}
+
+.advise {
+	height: 0px;
+	overflow: hidden;
+	display: block !important;
+}
+
+.advise.deploy {
+	height: auto;
+}
+
+.advise img {
+	width: 100px;
+	height: 100px;
+	border-radius: 1000px;
+	float: left;
+	margin-right: 10px !important;
+}
+
+.advise h4 {
+	margin: 7px 0px;
+}
+
+.advise > * {
+	margin-top: 20px !important;
 }
