--- a/assets/css/sscat.css
+++ b/assets/css/sscat.css
@@ -69,6 +69,10 @@
 	margin: 0px auto !important;
 	width: 100px;
 	display: block;
+	color: white;
+	background-color: grey;
+	border: none;
+	border-radius: 4px;
 }
 
 .advise {
