--- a/assets/css/sscat.css
+++ b/assets/css/sscat.css
@@ -67,12 +67,15 @@
 #advise_button {
 	text-align: center;
 	margin: 0px auto !important;
-	width: 100px;
+	width: 140px;
 	display: block;
-	color: white;
 	background-color: grey;
 	border: none;
 	border-radius: 4px;
+}
+
+#advise_button * {
+	color: white;
 }
 
 .advise {
