List news responsive

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -595,30 +595,14 @@ footer #logograndlyon {
   height:auto;
   margin:0 25%;
 }
-
-
-.listgrid .grid-item {
-  position: relative;
-  float: left;
-  width: 150px;
-  height: 200px;
-  min-width: 32%;
-  margin: 5px;
-  background: #888;
-  color: #262524;
-  overflow: hidden;
+@media screen and (min-width: 785px){
+  .listgrid .grid-item {
+    min-width: 32%;
+  }
 }
 
 .listgrid .grid-item--height2 {
-  position: relative;
-  float: left;
-  width: 150px;
   height: 410px;
-  min-width: 32%;
-  margin: 5px;
-  background: #888;
-  color: #262524;
-  overflow: hidden;
 }
 
 #isotopesup{
