Ajout de la fiche produit

--- a/assets/css/shop.css
+++ b/assets/css/shop.css
@@ -1,3 +1,10 @@
 .grid-item {
 	min-width: 32%;
 }
+
+@media screen and (min-width: 768px) {
+	#sidebar {
+		position: relative;
+		top: -69px;
+	}
+}
