--- a/assets/css/errors.css
+++ b/assets/css/errors.css
@@ -1,13 +1,15 @@
 /* Error page */
-.error404{ 
-  background: url(https://38.media.tumblr.com/546c0cd48d71f210f9b67a389003790d/tumblr_neq0yw9rMA1tm16jjo1_500.gif) no-repeat center center fixed; 
+.error404 { 
+  background: url('../img/Error404-keyboard.gif') no-repeat center center fixed; 
   background-size: cover;
-  min-height:72%;
+  height: 72%;
+  min-height: 600px;
+  text-align:center;
 }
 
 #error h1{
   font-size: 16em;
-  margin: .2em .5em;
+  margin: 11%;
   color: rgba(255,255,255, 0.7);
   margin-bottom:0px;
 }
@@ -18,24 +20,14 @@
   color: rgba(255,255,255, 0.6);
 }
 
-div.error{
-  width:100%;
-  text-align:center;
-}
-
 /* Build page */
-.yolo {
+#build {
   font-family: 'Oswald', sans-serif;
-  letter-spacing: 1px;
-  height: 700px;
-  margin-top: -750px;
+  height: 480px;
+  margin-top: -560px;
 }
 
-.yoloclass img{
-  width:100%;
-}
-
-.yolo .ribbon
+#build .ribbon
 .ribbon {
   position: absolute;
   top: 100;
