--- a/assets/css/sscat.css
+++ b/assets/css/sscat.css
@@ -1,6 +1,24 @@
 #gmap {
 	height: 50%;
-	min-height: 280px;
+	min-height: 430px;
+}
+
+@media screen and (max-width: 550px) {
+  #gmap {
+    min-height: 360px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  #gmap {
+    min-height: 260px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  #gmap {
+    min-height: 213px;
+  }
 }
 
 #gmap * {
